# iambic

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  mkdocs.yml  mypy.ini  netlify.toml  pyproject.toml  requirements-dev.txt  requirements.txt  schema.json  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pythonpublish.yml  run_tests.yml
docs/: .pages  _redirects  how-it-works.md  index.md
docs/plays/: __init__.py
docs/plays/comedies/: a-midsummer-night-s-dream.md  as-you-like-it.md  love-s-labours-lost.md  much-ado-about-nothing.md  the-comedy-of-errors.md  the-merry-wives-of-windsor.md  twelfth-night.md  two-gentlemen-of-verona.md
docs/plays/histories/: henry-iv-part-1.md  henry-iv-part-2.md  henry-v.md  henry-vi-part-1.md  henry-vi-part-2.md  henry-vi-part-3.md  henry-viii.md  king-john.md  richard-ii.md  richard-iii.md
docs/plays/problems/: all-s-well-that-ends-well.md  measure-for-measure.md  the-merchant-of-venice.md  the-taming-of-the-shrew.md  troilus-and-cressida.md
docs/plays/roman/: antony-and-cleopatra.md  coriolanus.md  julius-caesar.md  titus-andronicus.md
docs/plays/romances/: a-winter-s-tale.md  cymbeline.md  pericles.md  the-tempest.md
docs/plays/tragedies/: hamlet.md  king-lear.md  macbeth.md  othello.md  romeo-and-juliet.md  timon-of-athens.md
docs/usage/: .pages  breakdowns.md  index.md  parsing.md  rendering.md
iambic/: __about__.py  __init__.py  ast.py  roman.py
iambic/ast/: __init__.py  base.py  index.py  node.py
iambic/parse/: __init__.py  data.py  text.py
iambic/plays/: __init__.py
iambic/plays/a-midsummer-night-s-dream/: A Midsummer Night's Dream.md
iambic/plays/a-winter-s-tale/: A Winter's Tale.md
iambic/plays/all-s-well-that-ends-well/: All's Well That Ends Well.md
iambic/plays/antony-and-cleopatra/: Antony and Cleopatra.md
iambic/plays/as-you-like-it/: As You Like It.md
iambic/plays/comedies/: a-midsummer-night-s-dream.md  as-you-like-it.md  love-s-labours-lost.md  much-ado-about-nothing.md  the-comedy-of-errors.md  the-merry-wives-of-windsor.md  twelfth-night.md  two-gentlemen-of-verona.md
iambic/plays/coriolanus/: Coriolanus.md
iambic/plays/cymbeline/: Cymbeline.md
iambic/plays/edward-iii/: Edward III.md
iambic/plays/hamlet/: Hamlet.md
iambic/plays/henry-iv-part-1/: Henry IV, Part 1.md
iambic/plays/henry-iv-part-2/: Henry IV, Part 2.md
iambic/plays/henry-v/: Henry V.md
iambic/plays/henry-vi-part-1/: Henry VI, Part 1.md
iambic/plays/henry-vi-part-2/: Henry VI, Part 2.md
iambic/plays/henry-vi-part-3/: Henry VI, Part 3.md
iambic/plays/henry-viii/: Henry VIII.md
iambic/plays/histories/: edward-iii.md  henry-iv-part-1.md  henry-iv-part-2.md  henry-v.md  henry-vi-part-1.md  henry-vi-part-2.md  henry-vi-part-3.md  henry-viii.md  king-john.md  richard-ii.md  richard-iii.md
iambic/plays/julius-caesar/: Julius Caesar.md
iambic/plays/king-john/: King John.md
iambic/plays/king-lear/: King Lear.md
iambic/plays/love-s-labours-lost/: Love's Labours Lost.md
iambic/plays/macbeth/: Macbeth.md
iambic/plays/measure-for-measure/: Measure for Measure.md
iambic/plays/much-ado-about-nothing/: Much Ado About Nothing.md
iambic/plays/othello/: Othello.md
iambic/plays/pericles/: Pericles.md
iambic/plays/problems/: all-s-well-that-ends-well.md  measure-for-measure.md  the-merchant-of-venice.md  the-taming-of-the-shrew.md  troilus-and-cressida.md
iambic/plays/richard-ii/: Richard II.md
iambic/plays/richard-iii/: Richard III.md
iambic/plays/roman/: antony-and-cleopatra.md  coriolanus.md  julius-caesar.md  titus-andronicus.md
iambic/plays/romances/: a-winter-s-tale.md  cymbeline.md  pericles.md  the-tempest.md
iambic/plays/romeo-and-juliet/: Romeo and Juliet.md
iambic/plays/the-comedy-of-errors/: The Comedy of Errors.md
iambic/plays/the-merchant-of-venice/: The Merchant of Venice.md
iambic/plays/the-merry-wives-of-windsor/: The Merry Wives of Windsor.md
iambic/plays/the-taming-of-the-shrew/: The Taming of the Shrew.md
iambic/plays/the-tempest/: The Tempest.md
iambic/plays/timon-of-athens/: Timon of Athens.md
iambic/plays/titus-andronicus/: Titus Andronicus.md
iambic/plays/tragedies/: hamlet.md  king-lear.md  macbeth.md  othello.md  romeo-and-juliet.md  timon-of-athens.md
iambic/plays/troilus-and-cressida/: Troilus and Cressida.md
iambic/plays/twelfth-night/: Twelfth Night.md
iambic/plays/two-gentlemen-of-verona/: Two Gentlemen of Verona.md
iambic/render/: __init__.py  html.py  json.py  markdown.py  table.py
iambic/schema/: __init__.py  dataschema.py  frozendict.py  schema.json
tests/: test_frozendict.py  test_roman.py  test_tabulate.py
tests/parse/: test_data.py  test_text.py
tests/render/: test_html.py  test_json.py  test_markdown.py
tests/static/: __init__.py  dataset  foo-raw.md  foo-rendered.md  foo.html  foo.json  parsed.py  table.py
