[tool.poetry]
name = "iambic"
packages = [{include = "iambic"}, {include = "docs"}]
version = "2.3.1"
description = "Data extraction and rendering library for Shakespearean text."
authors = ["Sean Stewart <sean_stewart@me.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/seandstewart/iambic"
keywords = ["text", "render", "shakespeare", "text-processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
include = ["*.md", "*.json"]

[tool.poetry.dependencies]
python = "^3.7"
typical = "^2.0.27"
tablib = {extras = ["cli"], version = "^2.0.0"}
ujson = "^2.0"
markdown = "^3.2.2"
pymdown-extensions = "^7.1"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
pre-commit = "^1.20"
flake8 = "^3.7.9"
mkdocs-awesome-pages-plugin = "^2.2.0"
mkdocs = "^1.1"
mypy = "^0.761"
mkdocs-material = "^5.5"
fontawesome-markdown = "^0.2.6"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
